google signin added

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso denegado</title>
+    <title>google Sign-In</title>
 </head>
 <body>
-    <h1>Acceso denegado</h1>
+    <h1>google Sign-In</h1>
+    <hr>
+
+    <div id="g_id_onload"
+        data-client_id=""
+        data-auto_prompt="false"
+        data-callback="handleCredentialResponse">
+    </div>
+    <!-- data-login_uri="https://your.domain/your_login_endpoint" -->
+    <div class="g_id_signin"
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+
+    <button id="googleSignOut">
+        SignOut
+    </button>
+
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+    <script>
+        function handleCredentialResponse(response) {
+            
+            // google token or ID token
+            // console.log('id_tkn',response.credential);
+
+            const bodyData = { idToken: response.credential }
+
+            fetch('http://localhost:8081/api/auth/google', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify( bodyData )
+            })
+                .then( response => response.json() )
+                .then( response => {
+                    console.log(response);
+                    localStorage.setItem('userEmail', response.data.user.email);
+                })
+                .catch( console.warn );
+
+        }
+
+        const btnGoogleSignOut = document.getElementById('googleSignOut');
+        btnGoogleSignOut.onclick = () => {
+            console.log( google.accounts.id )
+            google.accounts.id.disableAutoSelect()
+
+            google.accounts.id.revoke( localStorage.getItem('userEmail'), done => {
+                localStorage.clear();
+                location.reload();
+            });
+        }
+    </script>
+
 </body>
 </html>
