google sigin front modified

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <hr>
 
     <div id="g_id_onload"
-        data-client_id=""
+        data-client_id="GOOGLE_CLIENT_ID"
         data-auto_prompt="false"
         data-callback="handleCredentialResponse">
     </div>
